--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -187,7 +187,7 @@ crossorigin=""/>
 </p>
 
 <div class="sources col-12 mt-3">
-  <b class="text-center mb-1"><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
+  <b><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
   <br>
     <ul>
       <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
@@ -202,45 +202,47 @@ crossorigin=""/>
     </ul>
 </div>
 
-<div class="row">
-  <div class="sources col-5 mt-3">
-    <b class="text-center mb-1"><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
-    <br>
-      <ul>
-        <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
-        <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
-        <li>P.Franchomme, R.Jollois, D.Péonël. Editions Roger Jollois. "L'aromathérapie exactement" 2001. 510 pages. ISBN: 2-87819-001-7</li>
-        <li>P.Franchomme. Edition TREDANIEL LA MAISNIE. "La science des huiles essentielles médicinales." 2015. 580 pages. ISBN : 978-2813207630 </li>
-        <li>A.O. Tucker, T. Debaggio. Edited by Francesco DeBaggio. "The encyclopedia of herbs - a comprehensive reference to herbs of flavor and fragrance" 2009. 605 pages. ISBN-13: 978-0-88192-994-2 </li>
-        <li>“A list of cultivated plants yielding aroma substances”, 4 pages.</li>
-        <li>Nawal Saïchi, Philippe Durand, Institut Klorane, Edititons Pierre Fabre, “Guide des conifères et espèces apparentées”, 2009, 67 pages. Code 458 125</li>
-        <li>Asja Sarkic, Iris Stappen, Department of Pharmaceutical Chemistry, University of Vienna, “Essential Oils ans Their Single Compounds in Cosmetics”, 2018, 21 pages.</li>
-        <li>United Nations Industrial Development Organization, K. Tuley De Silva, “A Manual on The Essential Oil Industry”, 1995, 231 pages, ISBN : 978-9-2110-6437-7</li>
-        <li>Dr Robert P. Adams, Baylor University, “Identification Of Essential Oil Components By Gas Chromatography Mass Spectrometry”, Edition 4.1, 2017, 809 pages. ISBN : 978-1-932633-21-4</li>
-        <li><a class="interpop" href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
-        <li><a class="interpop" href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
-      </ul>
-  </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="sources col-5 mt-3">
+      <b><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
+      <br>
+        <ul>
+          <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
+          <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
+          <li>P.Franchomme, R.Jollois, D.Péonël. Editions Roger Jollois. "L'aromathérapie exactement" 2001. 510 pages. ISBN: 2-87819-001-7</li>
+          <li>P.Franchomme. Edition TREDANIEL LA MAISNIE. "La science des huiles essentielles médicinales." 2015. 580 pages. ISBN : 978-2813207630 </li>
+          <li>A.O. Tucker, T. Debaggio. Edited by Francesco DeBaggio. "The encyclopedia of herbs - a comprehensive reference to herbs of flavor and fragrance" 2009. 605 pages. ISBN-13: 978-0-88192-994-2 </li>
+          <li>“A list of cultivated plants yielding aroma substances”, 4 pages.</li>
+          <li>Nawal Saïchi, Philippe Durand, Institut Klorane, Edititons Pierre Fabre, “Guide des conifères et espèces apparentées”, 2009, 67 pages. Code 458 125</li>
+          <li>Asja Sarkic, Iris Stappen, Department of Pharmaceutical Chemistry, University of Vienna, “Essential Oils ans Their Single Compounds in Cosmetics”, 2018, 21 pages.</li>
+          <li>United Nations Industrial Development Organization, K. Tuley De Silva, “A Manual on The Essential Oil Industry”, 1995, 231 pages, ISBN : 978-9-2110-6437-7</li>
+          <li>Dr Robert P. Adams, Baylor University, “Identification Of Essential Oil Components By Gas Chromatography Mass Spectrometry”, Edition 4.1, 2017, 809 pages. ISBN : 978-1-932633-21-4</li>
+          <li><a class="interpop" href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
+          <li><a class="interpop" href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
+        </ul>
+    </div>
 
-  <div class="sources offset-2 col-5 mt-3">
-    <b class="text-center mb-1"><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
-    <br>
-      <ul>
-        <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
-        <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
-        <li>Charles Sell Quest International, Ashford, Kent, “The Chemistry of Fragrances, From Perfumer to Consumer 2nd Edition”, 2006, 348 pages. ISBN-10: 0-85404-824-3</li>
-        <li>David H. Pybus, Charles Sell, Sales and Promotion Department, The Royal Society of Chemistry, “The Chemistry of Fragrances”, 1999, 297 pages. ISBN 0-85404-528-7</li>
-        <li>Günther Ohloff, Wilhelm Pickenhagen, Philip Kraft, NHCA, Verlag Helvetica Chimica Acta, Zürich (Switzerland), “Scent and Chemistry, The Molecular World of Odors”, 2012, 418 pages. ISBN-10: 3906390667</li>
-        <li>Sue Clarke, Elseiver Limited, “Essential Chemistry for Aromatherapy”, First Edition 2002, 302 pages. ISBN : 978-0-4431-0403-9</li>
-        <li>Charles S. Sell, Wiley Edition, “Chemistry and Sense of Smell”, 2014, 471 pages. ISBN : 978-0-470-55130-1</li>
-        <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
-        <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
-      </ul>
+    <div class="sources offset-2 col-5 mt-3">
+      <b><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
+      <br>
+        <ul>
+          <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
+          <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
+          <li>Charles Sell Quest International, Ashford, Kent, “The Chemistry of Fragrances, From Perfumer to Consumer 2nd Edition”, 2006, 348 pages. ISBN-10: 0-85404-824-3</li>
+          <li>David H. Pybus, Charles Sell, Sales and Promotion Department, The Royal Society of Chemistry, “The Chemistry of Fragrances”, 1999, 297 pages. ISBN 0-85404-528-7</li>
+          <li>Günther Ohloff, Wilhelm Pickenhagen, Philip Kraft, NHCA, Verlag Helvetica Chimica Acta, Zürich (Switzerland), “Scent and Chemistry, The Molecular World of Odors”, 2012, 418 pages. ISBN-10: 3906390667</li>
+          <li>Sue Clarke, Elseiver Limited, “Essential Chemistry for Aromatherapy”, First Edition 2002, 302 pages. ISBN : 978-0-4431-0403-9</li>
+          <li>Charles S. Sell, Wiley Edition, “Chemistry and Sense of Smell”, 2014, 471 pages. ISBN : 978-0-470-55130-1</li>
+          <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
+          <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
+        </ul>
+    </div>
   </div>
 </div>
 
 <div class="sources col-12 mt-3">
-  <b class="text-center mb-1"><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
+  <b><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
   <br>
     <ul>
       <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
