--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -241,7 +241,7 @@ crossorigin=""/>
   </div>
 </div>
 
-<div class="sources col-12 mt-3">
+<div class="sources col-12 mt-3 mb-3">
   <b><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
   <br>
     <ul>
