--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -203,7 +203,7 @@ crossorigin=""/>
 </div>
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row justify-content-around">
     <div class="sources col-5 mt-3">
       <b><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
       <br>
@@ -223,7 +223,7 @@ crossorigin=""/>
         </ul>
     </div>
 
-    <div class="sources offset-1 col-5 mt-3">
+    <div class="sources col-5 mt-3">
       <b><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
       <br>
         <ul>
