--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -205,7 +205,7 @@ crossorigin=""/>
 </div>
 
   <div class="row justify-content-around">
-    <div class="sources col-6 mt-3 ml-2">
+    <div class="sources col-5.5 mt-3 ">
       <b style="align-items: center;"><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
       <br>
         <ul>
