--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -206,7 +206,7 @@ crossorigin=""/>
 
   <div class="row justify-content-around">
     <div class="sources col-5 mt-3 ">
-      <b style="align-items: center;"><h2 lang="fr">Sources "Naturels"</h2><h2 lang="en">"Naturals" Sources</h2></b>
+      <b><h3 lang="fr" style="text-align: center;">Sources "Naturels"</h3><h3 lang="en">"Naturals" Sources</h3></b>
       <br>
         <ul>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
