--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -206,7 +206,7 @@ crossorigin=""/>
 
   <div class="row justify-content-around">
     <div class="sources col-5 mt-3 ">
-      <b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
+      <p class="m-0 p-0"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
       <br>
         <ul>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
