--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -187,8 +187,7 @@ crossorigin=""/>
 </p>
 
 <div class="sources col-12 mt-3">
-  <b><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
-  <br>
+      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources Généralistes</span><span lang="en"> Général Sources</span></b></p>
     <ul>
       <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
@@ -224,8 +223,7 @@ crossorigin=""/>
     </div>
 
     <div class="sources col-5 mt-3">
-      <b><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
-      <br>
+      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b></p>
         <ul>
           <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
           <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
@@ -241,8 +239,7 @@ crossorigin=""/>
   </div>
 
 <div class="sources col-12 mt-3 mb-3">
-  <b><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
-  <br>
+    <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Réglementation</span><span lang="en">Regulatory</span></b></p>
     <ul>
       <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
       <li><a class="interpop" href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
