--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -204,7 +204,7 @@ crossorigin=""/>
 </div>
 
   <div class="row col-11 align-items-center">
-    <div class="sources col-6 mt-3 ">
+    <div class="sources col-5 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
         <ul>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
@@ -222,7 +222,7 @@ crossorigin=""/>
         </ul>
     </div>
 
-    <div class="sources col-6 mt-3">
+    <div class="sources offset-1 col-5 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b></p>
         <ul>
           <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
