--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -203,7 +203,8 @@ crossorigin=""/>
     </ul>
 </div>
 
-  <div class="row col-11 align-items-center">
+  <div class="container-fluid">
+    <div class="row">
     <div class="sources col-5 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
         <ul>
@@ -236,6 +237,7 @@ crossorigin=""/>
           <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
         </ul>
     </div>
+  </div>
   </div>
 
 <div class="sources col-12 mt-3 mb-3">
