--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -203,8 +203,16 @@ crossorigin=""/>
     </ul>
 </div>
 
-  <div class="container-fluid">
-    <div class="row">
+  <div class="row justify-content-around">
+    <div class="col-4">
+      One of two columns
+    </div>
+    <div class="col-4">
+      One of two columns
+    </div>
+  </div>
+  
+  <div>
     <div class="sources col-5 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
         <ul>
@@ -238,7 +246,7 @@ crossorigin=""/>
         </ul>
     </div>
   </div>
-  </div>
+  
 
 <div class="sources col-12 mt-3 mb-3">
     <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Réglementation</span><span lang="en">Regulatory</span></b></p>
