--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -204,7 +204,7 @@ crossorigin=""/>
 </div>
 
 
-  <div class="row justify-content-around">
+  <div class="row col-12 justify-content-around">
     <div class="sources col-6 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
         <ul>
