--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -223,7 +223,7 @@ crossorigin=""/>
         </ul>
     </div>
 
-    <div class="sources col-6 mt-3">
+    <div class="sources col-6 mt-3 ml-2">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b></p>
         <ul>
           <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
