--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -204,7 +204,7 @@ crossorigin=""/>
 </div>
 
 
-  <div class="row col-12 justify-content-around">
+  <div class="row col-12 justify-content-around" style="background-color: blue;">
     <div class="sources col-6 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
         <ul>
@@ -223,7 +223,7 @@ crossorigin=""/>
         </ul>
     </div>
 
-    <div class="sources col-6 mt-3 ml-1">
+    <div class="sources col-6 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b></p>
         <ul>
           <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
