--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -204,7 +204,8 @@ crossorigin=""/>
 </div>
 
 
-  <div class="row col-12 justify-content-around" style="background-color: blue;">
+  <div class="row justify-content-around" style="background-color: blue;">
+    <div class="col-12">
     <div class="sources col-6 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
         <ul>
@@ -236,6 +237,7 @@ crossorigin=""/>
           <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
           <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
         </ul>
+    </div>
     </div>
   </div>
   
