--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -187,7 +187,7 @@ crossorigin=""/>
 </p>
 
 <div class="sources col-12 mt-3">
-      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources Généralistes</span><span lang="en"> Général Sources</span></b></p>
+      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p>
     <ul>
       <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
@@ -204,7 +204,7 @@ crossorigin=""/>
 </div>
 
 <div class="sources col-12 mt-3">
-      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b></p>
+      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Naturels</span><span lang="en">Naturals</span></b></p>
         <ul>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
@@ -222,7 +222,7 @@ crossorigin=""/>
     </div>
 
 <div class="sources col-12 mt-3">
-      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b></p>
+      <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Synthétiques</span><span lang="en">Synthetics</span></b></p>
         <ul>
           <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
           <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
