--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -174,7 +174,7 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOURCES DE SCENTREE</span><span lang="en">SCENTREE'S SOURCES & REFERENCES</span></h1>
+  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOURCES</span><span lang="en">SOURCES & REFERENCES</span></h1>
 </div>
 
 <hr>
