--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -167,6 +167,16 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
+<div class="entete">
+  <p class="mt-3"> 
+    <span lang="fr">Le projet <i>ScenTree</i> est né il y a deux ans. Depuis ce moment, nous travaillons à l'amélioration du site internet, de son contenu et à l'incrémantation de la base de données. Nous avons choisi de créer cette fenêtre d'informations afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, <b>chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</b></span>
+    <span lang="en"><i>ScenTree</i> project was born two years ago. Since then, we have been working on the enhancement of the website, its content and the increment of the database. We created this news window to keep you informed about the weekly website updates. Thus, every Sunday night, 5 to 7 new ingredients (and their monographs) will be added in the classification.</span>
+  </p>
+  <p>
+    <span lang="fr">Voici une liste chronologique retraçant les dates de publication des ingrédients ainsi que les étapes marquantes du projet et de son développement général : </span>
+    <span lang="en">Find below a chronological list redrawing the publication dates and the major steps of the project, and its general development:</span>
+  </p>  
+</div>
 
 
 </div>
