--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -385,7 +385,9 @@ crossorigin=""/>
           <h3 id="heading3"><span lang="fr">21 octobre 2019</span><span lang="en">21<sup>st</sup> october 2019</span>
           </h3>
           <p>
-            <span lang="fr">Signature de notre premier contrat avec </span>Signature of our first deal, with <a href="https://www.cinquiemesens.com/coworking/" target ="_BLANK">Cinquième Sens Co-Working</a> 
+            <span lang="fr">Signature de notre premier contrat avec </span>
+            <span lang="en">Signature of our first deal, with </span>
+            <a href="https://www.cinquiemesens.com/coworking/" target ="_BLANK">Cinquième Sens Co-Working</a> 
           </p>
         </div>
       </li>
