--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -182,7 +182,24 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h3 id="heading18"><span lang="fr">10 février 2020</span><span lang="en">10<sup>st</sup> february 2020</span></h3>
+          <h3 id="heading19"><span lang="fr">16 février 2020</span><span lang="en">16<sup>th</sup> february 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h3>
+          <p>
+              <a class="interpop"  href="../ingredients/Dynamone®__Dynamone®.html"><span lang="en">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span><span lang="fr">Dynamone<sup>®</sup> (CAS N°: 8016-26-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Cypriol_EO__Cypriol_HE.html"><span lang="en">Cypriol EO (CAS N°: 68916-60-9)</span><span lang="fr">Cypriol HE (CAS N°: 68916-60-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Cosmone®__Cosmone®.html"><span lang="en">Cosmone<sup>®</sup> (CAS N°: 259854-70-1)</span><span lang="fr">Cosmone<sup>®</sup> (CAS N°: 259854-70-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Pharaone®__Pharaone®.html"><span lang="en">Pharaone<sup>®</sup> (CAS N°: 313973-37-4)</span><span lang="fr">Pharaone<sup>®</sup> (CAS N°: 313973-37-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Florhydral®__Florhydral®.html"><span lang="en">Florhydral<sup>®</sup> (CAS N°: 125109-85-5)</span><span lang="fr">Florhydral<sup>®</sup> (CAS N°: 125109-85-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Safraleine®__Safraleine®.html"><span lang="en">Safraleine<sup>®</sup> (CAS N°: 54440-17-4)</span><span lang="fr">Safraleine<sup>®</sup> (CAS N°: 54440-17-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dupical__Dupical.html"><span lang="en">Dupical (CAS N°: 30168-23-1)</span><span lang="fr">Dupical (CAS N°: 30168-23-1)</span></a>
+          </p>
+          <p><span lang="fr"> Refonte et harmonisation des interfaces de certaines pages du ruban droit. </span><span lang="en">Revamping and harmonization of some page interfaces from right ribbon buttons.</span></p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
+          <h3 id="heading18"><span lang="fr">9 février 2020</span><span lang="en">9<sup>th</sup> february 2020</span></h3>
           <p>
             <span lang="fr">Lancement de l'<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">enquête de satisfaction</a> pour recueillir votre avis sur le projet et ainsi, continuer l'amélioration de ScenTree ! </span><span lang="en">Launching of a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">satisfaction survey</a> to get your opinion about the project, and continue enhancing ScenTree !</span> 
             
