--- a/html/_/support.html
+++ b/html/_/support.html
@@ -174,12 +174,43 @@ crossorigin=""/>
   <span lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</span>
 </p>
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-6 entreprise">
+      
+    </div>
+    <div class="col-6 particulier">
+      <p>
+        <ul>
+          <li>ASTORRI Marc<i class="profession"><span lang="fr"> (Apprenti Parfumeur)</span><span lang="en"> (Ex-Perfumer Apprentice)</span></i></li>
+          <li>BUCHANAN Jessica<i class="profession"><span lang="fr"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en"> (Perfumer Freelance at 1000 Flowers)</span></i></li>
+          <li>CERVI Yohan<i class="profession"><span lang="fr"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en"> (Director of Creation at MAELSTROM Parfumeurs)</span></i></li>
+          <li>DECOLIN Clémence<i class="profession"><span lang="fr"> (Evaluatrice Fine Fragrance)</span><span lang="en"> (Fine Fragrance Evaluator)</span></i></li>
+          <li>DHORME Morgan<i class="profession"><span lang="fr"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en"> (Perfumer at Chidho Cosmétiques)</span></i></li>
+          <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
+          <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
+          <li>FIZET-PREVOT Hélène<i class="profession"><span lang="fr"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en"> (Perfumer Freelance at HF PERFUMES)</span></i></li>
+          <li>FRACHON Axelle<i class="profession"><span lang="fr"> (Formatrice Parfum)</span><span lang="en"> (Perfume Trainer)</span></i></li>
+          <li style="font-weight: bold; color: red">LE FLEM Gabriel <i class="profession"><span lang="fr"> (Chargé d'études)</span><span lang="en"> (Study leaders)</span></i></li>
+          <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
+          <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
+          <li>NORMAND Sophie<i class="profession"><span lang="fr"> (Rédactrice - Formatrice Parfum)</span><span lang="en"> (Writer - Perfume Trainer)</span></i></li>
+          <li>OROFINO Delphine<i class="profession"><span lang="fr"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en"> (Marketing of perfumes and cosmetics)</span></i></li>
+          <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
+          <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
+          <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
+          <li>TAMEN Jeremy<i class="profession"><span lang="fr"> (Formateur expert dans les Fragrances du thé)</span><span lang="en"> (Trainer - Tea fragrances expert)</span></i></li>
+          <li>VILLEPREUX Céline<i class="profession"><span lang="fr"> (Experte Matières Premières – Firmenich)</span><span lang="en"> (Raw Materials Expert at Firmenich)</span></i></li>
+        </ul>
+      </p>
+    </div>
+  </div>
+</div>
 
 </div>
 
 
 </div>
-
 </div>
 </div>
 </main>
