--- a/html/_/support.html
+++ b/html/_/support.html
@@ -176,10 +176,14 @@ crossorigin=""/>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-6 entreprise">
+    <div class="col-6 entreprise" style="background-color: red;">
       
     </div>
-    <div class="col-6 particulier">
+    <div class="col-6 particulier" style="background-color: grey">
+      <p class="mt-3 m-0 p-0 text-center">
+        <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
+        <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
+      </p>
       <p>
         <ul>
           <li>ASTORRI Marc<i class="profession"><span lang="fr"> (Apprenti Parfumeur)</span><span lang="en"> (Ex-Perfumer Apprentice)</span></i></li>
