--- a/html/_/support.html
+++ b/html/_/support.html
@@ -176,10 +176,15 @@ crossorigin=""/>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-6 entreprise" style="background-color: red;">
-      
+    <div class="col-6 entreprise">
+       <p class="mt-3 m-0 p-0 text-center">
+        <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
+        <span lang="en"><b><i>Partner companies</i></b> </span>
+      </p>
     </div>
-    <div class="col-6 particulier" style="background-color: grey">
+
+
+    <div class="col-6 particulier">
       <p class="mt-3 m-0 p-0 text-center">
         <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
         <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
