--- a/html/_/support.html
+++ b/html/_/support.html
@@ -212,6 +212,30 @@ crossorigin=""/>
           <li>VILLEPREUX Céline<i class="profession"><span lang="fr"> (Experte Matières Premières – Firmenich)</span><span lang="en"> (Raw Materials Expert at Firmenich)</span></i></li>
         </ul>
       </p>
+      <p class="mt-3 m-0 p-0 text-center">
+        <span lang="fr"><b><i>Développement informatique</i></b> </span>
+        <span lang="en"><b><i>Informatics development</i></b> </span>
+      </p>
+        <ul>
+          <li>JACQUELINET Julien </li>
+          <li>BAUD Maxime</li>
+          <li>DE VIENNE Damien</li>
+        </ul>
+      <p class="mt-3 m-0 p-0 text-center">
+        <span lang="fr"><b><i>Responsable mentions légales et juridiques</i></b> </span>
+        <span lang="en"><b><i>Legal and juridical mentions</i></b> </span>
+      </p>
+        <ul>
+          <li>VASKOU Marie</li>
+        </ul>
+      <p class="mt-3 m-0 p-0 text-center">
+        <span lang="fr"><b><i>Graphismes, visuels et <a href="video.html">vidéo </a></i></b> </span>
+        <span lang="en"><b><i>Graphism, visuals and <a href="video.html">video </a></i></b> </span>
+      </p>
+        <ul>
+          <li>ERCOLANELLI Clara (Logo)</li>
+          <li>SHOGUN SHOOTER (Vidéo)</li>
+        </ul>
     </div>
   </div>
 </div>
