--- a/html/_/support.html
+++ b/html/_/support.html
@@ -166,8 +166,8 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
 <p class="mt-3">
-  <span lang="fr"> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail. </span>
-  <span lang="en"> <i><b>ScenTree</b></i> was imagined and conceived by two MSc students of the ISIPCA, Maxime BAUD and Thomas ESPINASSE. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </span>
+  <span lang="fr"> Le projet <i>ScenTree</i> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail. </span>
+  <span lang="en"> <i>ScenTree</i> was imagined and conceived by two MSc students of the ISIPCA, Maxime BAUD and Thomas ESPINASSE. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </span>
 </p>
 <p class="mt-3">
   <span lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </span>
@@ -191,8 +191,8 @@ crossorigin=""/>
       </p>
       <p>
         <ul>
-          <li>ASTORRI Marc<i class="profession"><span lang="fr"> (Apprenti Parfumeur)</span><span lang="en"> (Ex-Perfumer Apprentice)</span></i></li>
-          <li>BUCHANAN Jessica<i class="profession"><span lang="fr"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en"> (Perfumer Freelance at 1000 Flowers)</span></i></li>
+          <li>ASTORRI Marc ><span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
+          <li>BUCHANAN Jessica<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
           <li>CERVI Yohan<i class="profession"><span lang="fr"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en"> (Director of Creation at MAELSTROM Parfumeurs)</span></i></li>
           <li>DECOLIN Clémence<i class="profession"><span lang="fr"> (Evaluatrice Fine Fragrance)</span><span lang="en"> (Fine Fragrance Evaluator)</span></i></li>
           <li>DHORME Morgan<i class="profession"><span lang="fr"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en"> (Perfumer at Chidho Cosmétiques)</span></i></li>
