--- a/html/_/support.html
+++ b/html/_/support.html
@@ -191,9 +191,10 @@ crossorigin=""/>
       </p>
       <p>
         <ul>
-          <li>ASTORRI Marc ><span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
-          <li>BUCHANAN Jessica<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
-          <li>CERVI Yohan<i class="profession"><span lang="fr"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en"> (Director of Creation at MAELSTROM Parfumeurs)</span></i></li>
+          <li>ASTORRI Marc -<span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
+          <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
+          <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
+
           <li>DECOLIN Clémence<i class="profession"><span lang="fr"> (Evaluatrice Fine Fragrance)</span><span lang="en"> (Fine Fragrance Evaluator)</span></i></li>
           <li>DHORME Morgan<i class="profession"><span lang="fr"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en"> (Perfumer at Chidho Cosmétiques)</span></i></li>
           <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
