--- a/html/_/support.html
+++ b/html/_/support.html
@@ -194,23 +194,22 @@ crossorigin=""/>
           <li>ASTORRI Marc -<span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
           <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
           <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
-
-          <li>DECOLIN Clémence<i class="profession"><span lang="fr"> (Evaluatrice Fine Fragrance)</span><span lang="en"> (Fine Fragrance Evaluator)</span></i></li>
-          <li>DHORME Morgan<i class="profession"><span lang="fr"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en"> (Perfumer at Chidho Cosmétiques)</span></i></li>
-          <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
-          <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
-          <li>FIZET-PREVOT Hélène<i class="profession"><span lang="fr"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en"> (Perfumer Freelance at HF PERFUMES)</span></i></li>
-          <li>FRACHON Axelle<i class="profession"><span lang="fr"> (Formatrice Parfum)</span><span lang="en"> (Perfume Trainer)</span></i></li>
-          <li style="font-weight: bold; color: red">LE FLEM Gabriel <i class="profession"><span lang="fr"> (Chargé d'études)</span><span lang="en"> (Study leaders)</span></i></li>
-          <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
-          <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
-          <li>NORMAND Sophie<i class="profession"><span lang="fr"> (Rédactrice - Formatrice Parfum)</span><span lang="en"> (Writer - Perfume Trainer)</span></i></li>
-          <li>OROFINO Delphine<i class="profession"><span lang="fr"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en"> (Marketing of perfumes and cosmetics)</span></i></li>
-          <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
-          <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
-          <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
-          <li>TAMEN Jeremy<i class="profession"><span lang="fr"> (Formateur expert dans les Fragrances du thé)</span><span lang="en"> (Trainer - Tea fragrances expert)</span></i></li>
-          <li>VILLEPREUX Céline<i class="profession"><span lang="fr"> (Experte Matières Premières – Firmenich)</span><span lang="en"> (Raw Materials Expert at Firmenich)</span></i></li>
+          <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
+          <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
+          <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
+          <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
+          <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
+          <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
+          <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
+          <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
+          <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
+          <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
+          <li>OROFINO Delphine -<span lang="fr" class="profession"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en" class="profession"> (Marketing of perfumes and cosmetics)</span></li>
+          <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
+          <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
+          <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
+          <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
+          <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
         </ul>
       </p>
       <p class="mt-3 m-0 p-0 text-center">
