--- a/html/_/support.html
+++ b/html/_/support.html
@@ -182,7 +182,7 @@ crossorigin=""/>
         <span lang="en"><b><i>Partner companies</i></b> </span>
       </p>
       <p class="col-12 mt-3">
-         <a class="btn offset-1 col-4" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
+         <a class="btn offset-1 col-4 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
       </p>
     </div>
 
@@ -285,3 +285,4 @@ if (Cookies.get('RGPD_no_cookie') == -1) {
 </script>
 </body>
 </html>
+
