--- a/html/_/support.html
+++ b/html/_/support.html
@@ -175,7 +175,7 @@ crossorigin=""/>
 </p>
 
 <div class="container" style="background-color: blue;">
-  <div class="row">
+  <div class="row col-12">
     <div class="col-7 col-xs-12 entreprise">
        <p class="mt-3 m-0 p-0 text-center">
         <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
