--- a/html/_/support.html
+++ b/html/_/support.html
@@ -176,6 +176,7 @@ crossorigin=""/>
 
 <div class="row">
   <div class="col-12" style="background-color: blue;">
+    <div class="row">
     <div class="col-6 col-xs-12 entreprise" style="white;">
        <p class="mt-3 m-0 p-0 text-center">
         <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
@@ -242,6 +243,7 @@ crossorigin=""/>
         </ul>
     </div>
   </div>
+</div>  
 </div>
 </div>
 
