--- a/html/_/support.html
+++ b/html/_/support.html
@@ -175,19 +175,19 @@ crossorigin=""/>
 </p>
 
 <div class="row">
-  <div class="col-12 col-xs-12" style="background-color: blue;">
+  <div class="col-12 col-xs-12">
     <div class="row"> 
-      <div class="col-6 col-xs-12 entreprise" style="background-color: white;">
+      <div class="col-6 col-xs-12 entreprise">
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b><i>Sociétés partenaires</i></b> </span>
           <span lang="en"><b><i>Partner companies</i></b> </span>
         </p>
-        <p class="col-12 mt-3" style="background-color: grey;">
+        <p class="col-12 mt-3">
            <a class="btn offset-1 col-4 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
         </p>
       </div>
 
-      <div class="col-6 col-xs-12 particulier" style="background-color: yellow;">
+      <div class="col-6 col-xs-12 particulier">
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
           <span lang="en"><b><i>Professionals who participated to the ScenTree database :</i></b> </span>
