--- a/html/_/index.html
+++ b/html/_/index.html
@@ -113,8 +113,7 @@ crossorigin=""/>
     <br>
     <a class="btn mt-1 mb-1 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
     <br>
-    <br>
-    <span class="btn m-0"><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Enquête de satisfaction  </b></a><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Satisfaction survey  </b></a><i class="fas fa-info-circle notifi4"></i></span>
+    <span class="btn m-0 p-0"><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Enquête de satisfaction  </b></a><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Satisfaction survey  </b></a><i class="fas fa-info-circle notifi4"></i></span>
   </div>    
 </div>
 
