--- a/html/_/support.html
+++ b/html/_/support.html
@@ -103,6 +103,8 @@ crossorigin=""/>
   </div>    
 </div>
 
+<div class="row correctspacebug" style="height: 0.2em; background-color: blue;"></div>
+
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
   <div class="col-12 p-0 mt-5 mb-1">
