--- a/html/supporters/cinquieme_sens.html
+++ b/html/supporters/cinquieme_sens.html
@@ -34,7 +34,7 @@ crossorigin=""/>
 
 <!-- MODAL Cinquième Sens -->
 
-<div class="modal fade in  my-modal show_modal_at_start" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
+<div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
 
