--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -164,7 +164,7 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown"><span lang="fr">DECOUVRER NOTRE NEWSLETTER ! </span><span lang="en">DISCOVER OUR NEWSLETTER ! </span></h1>
+  <h1 class="gros_titre text-in-color-brown"><span lang="fr">DECOUVREZ NOTRE NEWSLETTER ! </span><span lang="en">DISCOVER OUR NEWSLETTER ! </span></h1>
 </div>
 
 <hr>
@@ -181,8 +181,8 @@ crossorigin=""/>
       <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary" >
         <p class="card-text">
-          <span lang="fr">Toutes les semaines, je reçois les nouveautés des dernières mises à jour</span>
-          <span lang="en">Receive each week the ScenTree updates</span>
+          <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour</span>
+          <span lang="en">I receive, twice a month, the ScenTree updates</span>
         </p>
       </div>
     </div>
@@ -190,8 +190,8 @@ crossorigin=""/>
       <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text ">
-          <span lang="fr">Je suis tenu au courant de l'arrivée de nouveaux sponsor sur la plateforme. Je reçois les actualités des sponsors déja présents</span>
-          <span lang="en">Keep informed of new sponsors entering the classification, and news of raw materials producers, already sponsoring ScenTree</span>
+          <span lang="fr">Je suis informé des arrivés et des actualités de nos sponsors</span>
+          <span lang="en">I am informed of the arrivals and news of our sponsors.</span>
         </p>
       </div>
     </div>
