--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -177,7 +177,7 @@ crossorigin=""/>
   </p>
 
   <div class="card-deck col-12 text-center">
-    <div class="card border-secondary">
+    <div class="card">
       <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary" >
         <p class="card-text">
@@ -186,7 +186,7 @@ crossorigin=""/>
         </p>
       </div>
     </div>
-    <div class="card border-secondary">
+    <div class="card">
       <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text ">
@@ -195,7 +195,7 @@ crossorigin=""/>
         </p>
       </div>
     </div>
-    <div class="card border-secondary">
+    <div class="card">
       <img class="card-img-top" src="../img/MP.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text">
