--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -178,8 +178,8 @@ crossorigin=""/>
 
   <div class="card-deck col-12 text-center">
     <div class="card">
-      <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="Card image cap">
-      <div class="card-body text-secondary" >
+      <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
+      <div class="card-body" >
         <p class="card-text">
           <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour</span>
           <span lang="en">I receive, twice a month, the ScenTree updates</span>
@@ -187,8 +187,8 @@ crossorigin=""/>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
-      <div class="card-body text-secondary">
+      <img class="card-img-top" src="../img/sponsor.jpg" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
+      <div class="card-body">
         <p class="card-text ">
           <span lang="fr">Je suis informé des arrivés, des nouveautés et des actualités de nos sponsors</span>
           <span lang="en">I am informed of the arrivals and news of our sponsors.</span>
@@ -196,8 +196,8 @@ crossorigin=""/>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/MP.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
-      <div class="card-body text-secondary">
+      <img class="card-img-top" src="../img/MP.jpg" title="Les ingrédients parfums" alt="Les ingrédients parfums">
+      <div class="card-body">
         <p class="card-text">
           <span lang="fr">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</span>
           <span lang="en">Receive details about new ingredients added on ScenTree each week</span>
