--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -176,7 +176,7 @@ crossorigin=""/>
     <span lang="en">Good news ! ScenTree is launching a newsletter in march ! Here is what we prepared for you :</span>
   </p>
 
-  <div class=" row col-12 card-deck text-center" style="background-color: yellow;">
+  <div class=" row card-deck text-center" style="background-color: yellow;">
     <div class="card">
       <img class="card-img-top text-center" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
       <div class="card-body" >
