--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -181,7 +181,7 @@ crossorigin=""/>
       <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
       <div class="card-body" >
         <p class="card-text">
-          <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour</span>
+          <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour de la plateforme</span>
           <span lang="en">I receive, twice a month, the ScenTree updates</span>
         </p>
       </div>
