--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -206,7 +206,7 @@ crossorigin=""/>
     </div>
   </div>
   
-  <div class="formulaire mt-4">
+  <div class="formulaire mt-4" style="background-color: yellow;">
   <form>
   <!--Nom-->  
     <div class="form-group row">
