--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -205,8 +205,10 @@ crossorigin=""/>
       </div>
     </div>
   </div>
-  
-  <div class="formulaire mt-4 col-8 " style="background-color: yellow;">
+
+<!--Gestion du formulaire-->
+<div class="row mt-4">
+  <div class="formulaire col-8 " style="background-color: yellow;">
     <form>
     <!--Nom-->  
       <div class="form-group row">
@@ -255,7 +257,7 @@ crossorigin=""/>
     </form>
   </div>
 
-  <div class="envoiRGPD">
+  <div class="envoiRGPD col-4" style="blue;">
     <!-- bouton d'envoi du formulaire-->
     <button type="submit" class="btn btn-secondary text-center"><span lang="fr">M'inscrire à la newsletter</span><span lang="en">Suscribe to newsletter</span></button>
     <!--RGPD-->
@@ -268,6 +270,8 @@ crossorigin=""/>
       <span lang="en">In application of EU Regulation 2016/679 of 27 April 2016 regarding the protection of personal data, you have the right to contest at any time the receipt of our newsletters by clicking on the hypertext link in them.</span>
     </p>
   </div>
+</div>
+
 </div><!--FIN BLOCK SCROLLABLE-->
 
 </div>
