--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -212,25 +212,18 @@ crossorigin=""/>
     <form>
     <!--Nom-->  
       <div class="form-group row" style="background-color: yellow;">
-        <label for="inputname" class="col-2 col-form-label">
+        <label for="inputname" class="col-form-label">
           <span lang="fr">Nom :</span>
           <span lang="en">Name :</span>
         </label>
-        <div class="col-10">
           <input type="text" class="form-control" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
           <input type="text" class="form-control" id="inputname" lang="en" placeholder="Write your name here..">
-        </div>
-      </div>
-    <!-- Prénom-->  
-      <div class="form-group row">
-        <label for="inputfirstname" class="col-2 col-form-label">
+        <label for="inputfirstname" class="col-form-label">
           <span lang="fr">Prénom :</span>
           <span lang="en">First name :</span>
         </label>
-        <div class="col-10">
           <input type="text" class="form-control" id="inputfirstname" lang="fr" placeholder="Saisir votre prénom ici..">
-          <input type="text" class="form-control" id="inputfirstname" lang="en" placeholder="Write your first name here..">
-        </div>  
+          <input type="text" class="form-control" id="inputfirstname" lang="en" placeholder="Write your first name here..">  
       </div>
     <!--emails -->
       <div class="form-group row">
@@ -257,7 +250,7 @@ crossorigin=""/>
     </form>
   </div>
 
-  <div class="envoiRGPD col-4" style="blue;">
+  <div class="envoiRGPD col-4">
     <!-- bouton d'envoi du formulaire-->
     <button class="btn btn-secondary text-center mt-3" type="submit" >
       <span lang="fr">M'inscrire à la newsletter</span>
